Corrected working hamburger and menu on mobile

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    height: 9rem;
+    height: 90px;
     position: fixed;
     top: 0;
     left: 0;
